# DBus-Config-Managed

./: .gitignore  CMakeLists.txt  README.md  run.sh  test.sh  test_client.sh
confManagerApplication1/: CMakeLists.txt  main.cpp
materials/tests/: test.sh  test_client.sh  test_json.sh
server/: CMakeLists.txt  ConfigurationObject.cpp  ConfigurationObject.h  main.cpp
